# dicom-classifier-demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/routes/: jobs.py  results.py  upload.py
app/services/: annotation_parser.py  dicom_parser.py  evaluation.py  inference.py  postprocess.py  storage.py
app/static/: app.js  style.css
app/static/samples/: Synthetic-Chest-001_ann.xml  Synthetic-Chest-002_ann.xml
app/templates/: index.html  results.html
models/: README.md
scripts/: download_annotations.py  download_model.py  download_sample_data.py  generate_sample.py  kaggle_download_luna16.py  kaggle_prepare_data.py  kaggle_train.py  upload_luna16_to_kaggle.sh
tests/: conftest.py  test_annotation_parser.py  test_dicom_parser.py  test_e2e.py  test_evaluation.py  test_inference.py  test_postprocess.py  test_routes.py
